# Paraviewer

./: pyproject.toml  readme.md
docs/: user_guide.md
paraviewer/: __main__.py  igv_builder.py  page_builder.py  paraviewer.py  process_paraphase.py  process_puretarget.py  special_info.py  utils.py
paraviewer/data/hg19/: config_paraphase.yaml
paraviewer/data/hg38/: config_paraphase.yaml  config_puretarget.yaml
paraviewer/templates/: paraviewer.html
